Removed method to update status with path parameter
